tests/ui/methods/receiver-equality.stderr
error[E0599]: no function or associated item named `method` found for struct `B<for<'a> fn(&'a ())>` in the current scope
  --> $DIR/receiver-equality.rs:12:30
   |
LL | struct B<T>(T);
   | ----------- function or associated item `method` not found for this struct
...
LL |     B::<for<'a> fn(&'a ())>::method(y);
   |                              ^^^^^^ function or associated item not found in `B<for<'a> fn(&'a ())>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
